--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>高専道場</title>
   <meta name="description" content="過去問クイズサイト">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-  <link rel="stylesheet" href="{{site.github.url}}">
+  <link rel="stylesheet" href="https://github.com/ioio1013/github.io/blob/master/stlye.css">
 </head>
 
 <body>
